Implemented GET retailers/{id}/inventory and unit tests - #127
