# swagger.yaml
@@ -405,6 +405,10 @@ paths:
           description: Shipment updated successfully
           schema:
             $ref: '#/definitions/Shipment'
+        400:
+          description: Invalid update to shipment
+          schema:
+            $ref: '#/definitions/Error'
         401:
           description: Unauthorized
           schema:
@@ -613,6 +617,42 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  '/retailers/{id}/inventory':
+    get:
+      summary: Retrieve inventory for a specific retailer
+      parameters:
+        - name: Authorization
+          in: header
+          description: Bearer token
+          required: true
+          type: string
+        - name: id
+          in: path
+          description: ID of the retailer for which inventory is to be retrieved
+          required: true
+          type: string
+      tags:
+        - Retailer
+        - Inventory
+      responses:
+        200:
+          description: Inventory retrieved successfully
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Inventory'
+        401:
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: Retailer does not exist
+          schema:
+            $ref: '#/definitions/Error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   '/products':
     get:
       summary: Retrieves products
@@ -716,21 +756,10 @@ definitions:
       - name
   AccessToken:
     properties:
-      id:
+      token:
         type: string
-      ttl:
-        default: 1209600
-        description: time to live in seconds (2 weeks by default)
-        type: number
-        format: double
-      created:
-        type: string
-        format: date
-      userId:
-        type: integer
-        format: int32
     required:
-      - id
+      - token
     additionalProperties: false
   Product:
     properties:
@@ -787,9 +816,11 @@ definitions:
       productId:
         type: integer
         format: int32
-      dcId:
+      locationId:
         type: integer
         format: int32
+      locationType:
+        type: string
     additionalProperties: false
   LineItem:
     properties:
